Adding strings to the xml string library. Using xml strings is important for language translation purposes and ease of access.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ZombieGame</string>
+    <string name="app_name">ZombieWorld</string>
+    <string name="welcome__text">Welcome To ZombieWorld</string>
+    <string name="creator_name">Created by: Luke Moua</string>
 </resources>
