--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">ZombieWorld</string>
-    <string name="welcome__text">Welcome To ZombieWorld</string>
+    <string name="app_name">Once Upon a Zombie</string>
+    <string name="welcome__text">The Zombie Story</string>
     <string name="creator_name">Created by: Luke Moua</string>
+    <string name="company_name">SkywalkerApps</string>
 </resources>
