--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="welcome__text">The Zombie Story</string>
     <string name="creator_name">Created by: Luke Moua</string>
     <string name="company_name">SkywalkerApps</string>
+    <string name="start_game">START SURVIVAL</string>
 </resources>
