--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="creator_name">Created by: Luke Moua</string>
     <string name="company_name">SkywalkerApps</string>
     <string name="start_game">START SURVIVAL</string>
+    <string name="image_desc">abandoned car</string>
 </resources>
