Added screen display for the character when they die. Changed the code for the random method so that the chance of the player dieing starts at 10% and will increase as the game progresses. Future updates are adding health, inventory, etc. as soon as I learn how to create saves.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="company_name">SkywalkerApps</string>
     <string name="start_game">START SURVIVAL</string>
     <string name="image_desc">abandoned car</string>
+    <string name="death_text">YOU ARE DEAD.....</string>
 </resources>
